[gd_scene load_steps=4 format=3 uid="uid://ckkgcksh6ikyq"]

[ext_resource type="Script" path="res://scenes/Stages/obj_physicsObject.gd" id="1_iu7cg"]
[ext_resource type="AudioStream" uid="uid://djywvggg65y46" path="res://Assets/Sounds/Glass/sou_glassClink-001.ogg" id="2_0oxpa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hu75"]

[node name="obj_physicsObject" type="RigidBody2D"]
position = Vector2(209, 30)
mass = 0.14
contact_monitor = true
script = ExtResource("1_iu7cg")

[node name="Placeholder" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(0.74902, 1, 1, 1)

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0hu75")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0oxpa")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
